<resources>
    <string name="ATC">ATC</string>
    <string name="AVAILABLE_FUNDS_INQUIRY">AVAILABLE FUNDS INQUIRY</string>
    <string name="Agent_Declaration">Agent Declaration</string>
    <string name="CASH">CASH</string>
    <string name="CASHBACK">CASHBACK</string>
    <string name="Current_Address">Current Address Declaration</string>
    <string name="Customer_Profile">Please confirm following customer profile details</string>
    <string name="Customer_Profile_Revalidate">Please confirm following customer details</string>
    <string name="DEPOSIT">DEPOSIT</string>
    <string name="GOODS">GOODS</string>
    <string name="INQUIRY">INQUIRY</string>
    <string name="TRANSFER">TRANSFER</string>
    <string name="Wrong">Wrong</string>
    <string name="aadhaar">Aadhaar No. :</string>
    <string name="aadhaarSeeding">Aadhaar Seeding</string>
    <string name="aadhaar_address">Address</string>
    <string name="aadhaar_choose_add_typ">Choose address type</string>
    <string name="aadhaar_confirm_add_typ">Confirm address type</string>
    <string name="aadhaar_consent">I hereby voluntarily give consent to use my aadhaar to authenticate me from UIDAI.</string>
    <string name="aadhaar_detail">Aadhaar Details</string>
    <string name="aadhaar_details">Details as per Aadhaar</string>
    <string name="aadhaar_dob">DOB</string>
    <string name="aadhaar_ekyc_title">Aadhaar KYC (Biometric)</string>
    <string name="aadhaar_error">Please enter aadhaar number</string>
    <string name="aadhaar_gender">Gender</string>
    <string name="aadhaar_name">Name</string>
    <string name="aadhaar_seeding">Aadhaar Seeding</string>
    <string name="aadhaar_valid_error">Please enter valid aadhaar number</string>
    <string name="aadhar_number">Aadhar Number</string>
    <string name="aadhar_should_be_Start_with">Aadhaar should not start with zero</string>
    <string name="aadharproof">Aadhaar</string>
    <string name="aadress_1">Address line 1*</string>
    <string name="aadress_1_hint">Address line 1</string>
    <string name="aadress_2">Address line 2</string>
    <string name="aadress_3">Address line 3</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_no_length">Account number length should be at least 6 digit long</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="cb_agent_declaration_head">Has KYC been done at following address:</string>
    <string name="cb_agent_declaration_text">Address</string>
    <string name="date_time">Date/Time :</string>
    <string name="help">Help</string>
    <string name="lat">Lattitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="merchant_register">Merchant Register</string>
    <string name="no">No</string>
    <string name="pref_category_barcode_scanning">Barcode Scanning</string>
    <string name="pref_category_face_detection">Face Detection</string>
    <string name="pref_category_info">Detection Info</string>
    <string name="pref_category_key_camera">pckc</string>
    <string name="pref_category_object_detection">Object Detection / Custom Object Detection</string>
    <string name="pref_category_pose_detection">Pose Detection</string>
    <string name="pref_category_segmentation">Selfie Segmentation</string>
    <string name="pref_category_text_recognition">Text Recognition</string>
    <string name="pref_category_title_camera">Camera</string>
    <string name="pref_dialog_message_face_detector_min_face_size">Proportion of the head width to the image width, and the valid value range is [0.0, 1.0]</string>
    <string name="pref_entry_values_face_detector_classification_mode_no_classifications">1</string>
    <string name="pref_entry_values_face_detector_contour_mode_all_contours">2</string>
    <string name="pref_entry_values_face_detector_landmark_mode_no_landmarks">1</string>
    <string name="pref_entry_values_face_detector_performance_mode_fast">1</string>
    <string name="pref_entry_values_pose_detector_performance_mode_fast">1</string>
    <string name="pref_group_title_face_mesh">Face Mesh Detection</string>
    <string name="pref_key_camera_live_viewport">clv</string>
    <string name="pref_key_camerax_front_camera_target_resolution">cfctas</string>
    <string name="pref_key_camerax_rear_camera_target_resolution">crctas</string>
    <string name="pref_key_enable_auto_zoom">eaz</string>
    <string name="pref_key_face_mesh_use_case">face_mesh_use_case</string>
    <string name="pref_key_front_camera_preview_size">fcpvs</string>
    <string name="pref_key_group_recognized_text_in_blocks">grtib</string>
    <string name="pref_key_info_hide">ih</string>
    <string name="pref_key_live_preview_face_detection_classification_mode">lpfdcfm</string>
    <string name="pref_key_live_preview_face_detection_contour_mode">lpfdcm</string>
    <string name="pref_key_live_preview_face_detection_face_tracking">lpfdft</string>
    <string name="pref_key_live_preview_face_detection_landmark_mode">lpfdlm</string>
    <string name="pref_key_live_preview_face_detection_min_face_size">lpfdmfs</string>
    <string name="pref_key_live_preview_face_detection_performance_mode">lpfdpm</string>
    <string name="pref_key_live_preview_object_detector_enable_classification">lpodec</string>
    <string name="pref_key_live_preview_object_detector_enable_multiple_objects">lpodemo</string>
    <string name="pref_key_live_preview_pose_detection_performance_mode">lppdpm</string>
    <string name="pref_key_live_preview_pose_detector_show_in_frame_likelihood">lppdsifl</string>
    <string name="pref_key_pose_detector_prefer_gpu">pdpg</string>
    <string name="pref_key_pose_detector_rescale_z">pdrz</string>
    <string name="pref_key_pose_detector_run_classification">pdrc</string>
    <string name="pref_key_pose_detector_visualize_z">pdvz</string>
    <string name="pref_key_rear_camera_preview_size">rcpvs</string>
    <string name="pref_key_segmentation_raw_size_mask">srsm</string>
    <string name="pref_key_show_language_tag">slt</string>
    <string name="pref_key_show_text_confidence">stc</string>
    <string name="pref_key_still_image_object_detector_enable_classification">siodec</string>
    <string name="pref_key_still_image_object_detector_enable_multiple_objects">siodemo</string>
    <string name="pref_key_still_image_pose_detector_show_in_frame_likelihood">sipdsifl</string>
    <string name="pref_screen">ps</string>
    <string name="pref_summary_camera_live_viewport">Do not block camera preview drawing on detection</string>
    <string name="pref_summary_pose_detector_prefer_gpu">If enabled, GPU will be used as long as it is available, stable and returns correct results. In this case, the detector will not check if GPU is really faster than CPU.</string>
    <string name="pref_summary_pose_detector_run_classification">Classify squat and pushup poses. Count reps in streaming mode. To get the best classification results based on the current sample data, face the camera side way and make sure your full body is in the frame.</string>
    <string name="pref_title_camera_live_viewport">Enable live viewport</string>
    <string name="pref_title_camerax_front_camera_target_resolution">CameraX front camera target resolution</string>
    <string name="pref_title_camerax_rear_camera_target_resolution">CameraX rear camera target resolution</string>
    <string name="pref_title_enable_auto_zoom">Enable auto zoom</string>
    <string name="pref_title_face_detector_classification_mode">Classification mode</string>
    <string name="pref_title_face_detector_contour_mode">Contour mode</string>
    <string name="pref_title_face_detector_face_tracking">Face tracking</string>
    <string name="pref_title_face_detector_landmark_mode">Landmark mode</string>
    <string name="pref_title_face_detector_min_face_size">Minimum face size</string>
    <string name="pref_title_face_detector_performance_mode">Performance mode</string>
    <string name="pref_title_face_mesh_use_case">Use Case</string>
    <string name="pref_title_front_camera_preview_size">Front camera preview size</string>
    <string name="pref_title_group_recognized_text_in_blocks">Group recognized text in paragraphs</string>
    <string name="pref_title_info_hide">Hide detection info</string>
    <string name="pref_title_object_detector_enable_classification">Enable classification</string>
    <string name="pref_title_object_detector_enable_multiple_objects">Enable multiple objects</string>
    <string name="pref_title_pose_detector_performance_mode">Performance mode</string>
    <string name="pref_title_pose_detector_prefer_gpu">Prefer using GPU</string>
    <string name="pref_title_pose_detector_rescale_z">Rescale z value for visualization</string>
    <string name="pref_title_pose_detector_run_classification">Run Classification</string>
    <string name="pref_title_pose_detector_show_in_frame_likelihood">Show in-frame likelihood</string>
    <string name="pref_title_pose_detector_visualize_z">Visualize z value</string>
    <string name="pref_title_rear_camera_preview_size">Rear camera preview size</string>
    <string name="pref_title_segmentation_raw_size_mask">Enable raw size mask</string>
    <string name="pref_title_show_language_tag">Show language identified</string>
    <string name="pref_title_show_text_confidence">Show confidence score</string>
    <string name="proceed">Proceed</string>
    <string name="read_self_declaration">Read Self Declaration</string>
    <string name="remarks">Remarks</string>
    <string name="select_language">Select Language</string>
    <string name="setting">Setting</string>
    <string name="status">Status:</string>
    <string name="terms_conditions_indusind">"

I hereby state that I have no objection in authenticating myself with Aadhaar based authentication system and give consent to providing my Aadhaar number, biometric for the purpose of availing Credit Card from IndusInd. 

I have been given to understand that my information submitted to the Bank herewith shall not be used for any purpose other than mentioned above, or as per the requirement of law."</string>
    <string name="yes">Yes</string>
</resources>