<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen android:key="@string/pref_screen"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:enabled="true" android:title="@string/pref_category_title_camera" android:key="@string/pref_category_key_camera">
        <ListPreference android:persistent="true" android:title="@string/pref_title_rear_camera_preview_size" android:key="@string/pref_key_rear_camera_preview_size" />
        <ListPreference android:persistent="true" android:title="@string/pref_title_front_camera_preview_size" android:key="@string/pref_key_front_camera_preview_size" />
        <ListPreference android:persistent="true" android:title="@string/pref_title_camerax_rear_camera_target_resolution" android:key="@string/pref_key_camerax_rear_camera_target_resolution" />
        <ListPreference android:persistent="true" android:title="@string/pref_title_camerax_front_camera_target_resolution" android:key="@string/pref_key_camerax_front_camera_target_resolution" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_camera_live_viewport" android:key="@string/pref_key_camera_live_viewport" android:summary="@string/pref_summary_camera_live_viewport" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_info">
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_info_hide" android:key="@string/pref_key_info_hide" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_barcode_scanning">
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_enable_auto_zoom" android:key="@string/pref_key_enable_auto_zoom" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_text_recognition">
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_group_recognized_text_in_blocks" android:key="@string/pref_key_group_recognized_text_in_blocks" android:defaultValue="false" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_show_language_tag" android:key="@string/pref_key_show_language_tag" android:defaultValue="false" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_show_text_confidence" android:key="@string/pref_key_show_text_confidence" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_object_detection">
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_object_detector_enable_multiple_objects" android:key="@string/pref_key_live_preview_object_detector_enable_multiple_objects" android:defaultValue="false" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_object_detector_enable_classification" android:key="@string/pref_key_live_preview_object_detector_enable_classification" android:defaultValue="true" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_face_detection">
        <ListPreference android:persistent="true" android:entries="@array/pref_entries_face_detector_landmark_mode" android:title="@string/pref_title_face_detector_landmark_mode" android:key="@string/pref_key_live_preview_face_detection_landmark_mode" android:summary="%s" android:defaultValue="@string/pref_entry_values_face_detector_landmark_mode_no_landmarks" android:entryValues="@array/pref_entry_values_face_detector_landmark_mode" />
        <ListPreference android:persistent="true" android:entries="@array/pref_entries_face_detector_contour_mode" android:title="@string/pref_title_face_detector_contour_mode" android:key="@string/pref_key_live_preview_face_detection_contour_mode" android:summary="%s" android:defaultValue="@string/pref_entry_values_face_detector_contour_mode_all_contours" android:entryValues="@array/pref_entry_values_face_detector_contour_mode" />
        <ListPreference android:persistent="true" android:entries="@array/pref_entries_face_detector_classification_mode" android:title="@string/pref_title_face_detector_classification_mode" android:key="@string/pref_key_live_preview_face_detection_classification_mode" android:summary="%s" android:defaultValue="@string/pref_entry_values_face_detector_classification_mode_no_classifications" android:entryValues="@array/pref_entry_values_face_detector_classification_mode" />
        <ListPreference android:persistent="true" android:entries="@array/pref_entries_face_detector_performance_mode" android:title="@string/pref_title_face_detector_performance_mode" android:key="@string/pref_key_live_preview_face_detection_performance_mode" android:summary="%s" android:defaultValue="@string/pref_entry_values_face_detector_performance_mode_fast" android:entryValues="@array/pref_entry_values_face_detector_performance_mode" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_face_detector_face_tracking" android:key="@string/pref_key_live_preview_face_detection_face_tracking" android:defaultValue="false" />
        <EditTextPreference android:persistent="true" android:title="@string/pref_title_face_detector_min_face_size" android:key="@string/pref_key_live_preview_face_detection_min_face_size" android:defaultValue="0.1" android:dialogMessage="@string/pref_dialog_message_face_detector_min_face_size" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_pose_detection">
        <ListPreference android:persistent="true" android:entries="@array/pref_entries_values_pose_detector_performance_mode" android:title="@string/pref_title_pose_detector_performance_mode" android:key="@string/pref_key_live_preview_pose_detection_performance_mode" android:summary="%s" android:defaultValue="@string/pref_entry_values_pose_detector_performance_mode_fast" android:entryValues="@array/pref_entry_values_pose_detector_performance_mode" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_pose_detector_prefer_gpu" android:key="@string/pref_key_pose_detector_prefer_gpu" android:summary="@string/pref_summary_pose_detector_prefer_gpu" android:defaultValue="true" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_pose_detector_show_in_frame_likelihood" android:key="@string/pref_key_live_preview_pose_detector_show_in_frame_likelihood" android:defaultValue="true" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_pose_detector_visualize_z" android:key="@string/pref_key_pose_detector_visualize_z" android:defaultValue="true" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_pose_detector_rescale_z" android:key="@string/pref_key_pose_detector_rescale_z" android:defaultValue="true" />
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_pose_detector_run_classification" android:key="@string/pref_key_pose_detector_run_classification" android:summary="@string/pref_summary_pose_detector_run_classification" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_category_segmentation">
        <SwitchPreference android:persistent="true" android:title="@string/pref_title_segmentation_raw_size_mask" android:key="@string/pref_key_segmentation_raw_size_mask" android:defaultValue="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_group_title_face_mesh">
        <ListPreference android:persistent="true" android:entries="@array/pref_entry_titles_face_mesh_use_case" android:title="@string/pref_title_face_mesh_use_case" android:key="@string/pref_key_face_mesh_use_case" android:summary="%s" android:defaultValue="1" android:entryValues="@array/pref_entry_values_face_mesh_use_case" />
    </PreferenceCategory>
</PreferenceScreen>