<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_agent_declaration_0" android:background="@color/white" android:padding="@dimen/dimen_20" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="20.0sp" android:textStyle="bold" android:textColor="@color/black" android:id="@id/tv_head" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10" android:text="@string/cb_agent_declaration_head" app:layout_constraintTop_toTopOf="parent" />
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/bg_constraint_layout" android:padding="@dimen/dimen_20" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20" android:layout_marginBottom="@dimen/dimen_20" app:layout_constraintTop_toBottomOf="@id/tv_head">
        <TextView android:textColor="@color/colorTextSecondary" android:id="@id/tv_agent_declaration_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_10" android:text="@string/cb_agent_declaration_text" android:lineSpacingExtra="@dimen/dimen_5" app:layout_constraintTop_toTopOf="parent" />
        <RadioGroup android:orientation="vertical" android:id="@id/rg_agent_declaration_address" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20" app:layout_constraintTop_toBottomOf="@id/tv_agent_declaration_address">
            <RadioButton android:id="@id/rb_agent_declaration_address_yes" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/yes" android:buttonTint="@color/color_1" />
            <RadioButton android:id="@id/rb_self_declaration_address_no" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/dimen_20" android:text="@string/no" android:buttonTint="@color/color_1" />
        </RadioGroup>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <Button android:textSize="@dimen/dimen_18" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_read_self_declaration" android:background="@drawable/app_button_selector" android:padding="@dimen/dimen_10" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/read_self_declaration" android:maxLines="1" android:textAllCaps="false" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/btn_proceed" app:layout_constraintStart_toStartOf="parent" />
    <Button android:textSize="@dimen/dimen_18" android:textColor="@color/white" android:gravity="center" android:id="@id/btn_proceed" android:background="@drawable/app_button_selector" android:paddingLeft="@dimen/dimen_20" android:paddingTop="@dimen/dimen_10" android:paddingRight="@dimen/dimen_20" android:paddingBottom="@dimen/dimen_10" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/proceed" android:maxLines="1" android:textAllCaps="true" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/btn_read_self_declaration" />
</androidx.constraintlayout.widget.ConstraintLayout>