<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="40.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:layout_width="fill_parent" android:layout_height="fill_parent">
        <RelativeLayout android:orientation="vertical" android:id="@id/floatingLayout" android:background="@color/black" android:visibility="gone" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_alignParentLeft="true" android:layout_alignParentTop="true" android:alpha="0.74" android:layout_alignParentStart="true">
            <Button android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/merchant_register" android:background="#00000000" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="14.0dip" android:text="@string/merchant_register" android:drawableRight="@drawable/ic_edit" android:layout_above="@id/AddharLink" android:layout_alignRight="@id/AddharLink" android:layout_alignEnd="@id/AddharLink" />
            <Button android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/AddharLink" android:background="#00000000" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip" android:text="@string/select_language" android:drawableRight="@drawable/ic_fingerprint_black_24dp" android:layout_above="@id/setting" android:layout_alignRight="@id/setting" android:layout_alignEnd="@id/setting" />
            <Button android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/setting" android:background="#00000000" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="18.0dip" android:text="@string/setting" android:drawableRight="@drawable/ic_settings" android:layout_above="@id/btn_help" android:layout_alignRight="@id/btn_help" android:layout_alignEnd="@id/btn_help" />
            <Button android:textStyle="bold" android:textColor="#ffffffff" android:id="@id/btn_help" android:background="#00000000" android:padding="10.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="35.0dip" android:layout_marginBottom="64.0dip" android:text="@string/help" android:drawableRight="@drawable/ic_help" android:layout_alignParentBottom="true" android:layout_marginEnd="26.0dip" android:layout_alignParentEnd="true" />
        </RelativeLayout>
    </FrameLayout>
</RelativeLayout>