<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView android:id="@id/card_view" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="@dimen/dimen_2"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:weightSum="1.0"
      xmlns:android="http://schemas.android.com/apk/res/android">
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5" android:layout_marginStart="@dimen/dimen_4">
            <com.mbs.sahipay.fonts.Roboto_Bold_TextView android:textSize="@dimen/dimen_14" android:textColor="@color/color_1" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/date_time" />
            <com.mbs.sahipay.fonts.Roboto_Bold_TextView android:textSize="@dimen/dimen_14" android:textColor="@color/color_1" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/status" />
            <com.mbs.sahipay.fonts.Roboto_Bold_TextView android:textSize="@dimen/dimen_14" android:textColor="@color/color_1" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lat" />
            <com.mbs.sahipay.fonts.Roboto_Bold_TextView android:textSize="@dimen/dimen_14" android:textColor="@color/color_1" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/longitude" />
            <com.mbs.sahipay.fonts.Roboto_Bold_TextView android:textSize="@dimen/dimen_14" android:textColor="@color/color_1" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/remarks" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_weight="0.5">
            <com.mbs.sahipay.fonts.Roboto_Regular_Textview android:textSize="@dimen/dimen_14" android:textStyle="bold" android:textColor="@color/color_1" android:id="@id/tv_date_time" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
            <com.mbs.sahipay.fonts.Roboto_Regular_Textview android:textSize="@dimen/dimen_14" android:textStyle="bold" android:textColor="@color/color_1" android:id="@id/tv_status_id" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <com.mbs.sahipay.fonts.Roboto_Regular_Textview android:textSize="@dimen/dimen_14" android:textStyle="bold" android:textColor="@color/color_1" android:id="@id/tv_lat" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <com.mbs.sahipay.fonts.Roboto_Regular_Textview android:textSize="@dimen/dimen_14" android:textStyle="bold" android:textColor="@color/color_1" android:id="@id/tv_long" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
            <com.mbs.sahipay.fonts.Roboto_Regular_Textview android:textSize="@dimen/dimen_14" android:textStyle="bold" android:textColor="@color/color_1" android:id="@id/tv_remark" android:padding="@dimen/dimen_8" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" />
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>